bottom navigation to fragment move

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.MenuActivity"
+            android:name=".ui.MainActivity"
             android:exported="true" />
 
         <meta-data
