--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,11 @@ android {
 }
 
 dependencies {
+    def room_version = "2.4.0" // версия Room
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation 'com.google.dagger:dagger:2.44.2'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.44.2'
+    annotationProcessor "androidx.room:room-compiler:$room_version"
     implementation 'com.google.code.gson:gson:2.9.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
