--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,10 @@
             android:permission="android.permission.SYSTEM_ALERT_WINDOW" />
 
         <activity
-            android:name=".ui.AuthenticationActivity"
+            android:name=".ui.authentication.AuthenticationActivity"
+            android:exported="true"/>
+        <activity
+            android:name=".ui.main.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,9 +29,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".ui.MainActivity"
-            android:exported="true" />
 
         <meta-data
             android:name="preloaded_fonts"
