--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.dagger:dagger:2.44.2'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.44.2'
     annotationProcessor "androidx.room:room-compiler:2.5.1"
     implementation "androidx.room:room-runtime:2.5.1"
